# quizz-integration

./: .env.example  README.md  docker-compose.yml  pyproject.toml
quizz_integration/: Dockerfile  entrypoint.sh  pyproject.toml
quizz_integration/core/: settings.py
